Use Event Alerts SDK, improve bee icons, and improve code